src/tests/snapshots/swayward__tests__window_opening__check_fullscreen_maximize@wfsBN-wmA.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nwant maximized: A\nconfig:\nwindow-rule {\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Activated, Maximized]

unmaximize configure:
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
